--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,7 @@ ENV = 'development'
 # VUE_APP_BASE_API = 'http://192.168.0.221:20145/api'
 VUE_APP_BASE_API = 'http://120.77.40.230:20145/api'
 # VUE_APP_BASE_API = 'http://127.0.0.1:8000/api'
+VUE_APP_API_URL = '/springbootApi'
+VUE_APP_URL = 'https://rydemo.appclouds.cn:10004/springbootApi'
+# 监控
+VUE_APP_LIVE_URL = 'http://192.168.0.221:85/live'
