--- a/package.json
+++ b/package.json
@@ -15,22 +15,42 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@core-player/playcore-hls": "^0.1.1",
+    "@videojs-player/vue": "^1.0.0",
+    "animate.css": "^4.1.1",
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "dplayer": "^1.27.1",
     "echarts": "^5.4.3",
+    "element-resize-detector": "^1.2.4",
     "element-ui": "^2.15.14",
     "file-saver": "^2.0.5",
+    "flv.js": "^1.6.2",
+    "hls.js": "^1.5.13",
+    "ismobilejs": "^1.1.1",
     "js-cookie": "2.2.0",
+    "load-script": "^2.0.0",
+    "mpegts.js": "^1.7.3",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "screenfull": "^5.2.0",
+    "video.js": "^8.16.1",
+    "videojs-contrib-hls": "^5.15.0",
+    "videojs-contrib-hls.js": "^3.2.0",
+    "videojs-flash": "^2.2.1",
+    "videojs-flvjs-es6": "^1.0.1",
     "vue": "2.6.10",
+    "vue-aliplayer-v2": "^1.3.0",
     "vue-clipboard2": "^0.3.3",
     "vue-clipboards": "^1.3.0",
+    "vue-core-video-player": "^0.1.4",
     "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
+    "vue-video-player": "^5.0.2",
     "vuex": "3.1.0",
+    "xgplayer": "^3.0.19",
+    "xgplayer-hls": "^3.0.19",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
